# Minecraft_with_OpenGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MineCraft_OpenGL.cbp  README.md  cmake_install.cmake
.build/map_generate.h/: build.options.json
.build/map_generate.h/sketch/: map_generate.h.cpp
MC_Config/: map.txt
MC_Shaders/: fs_block001.glsl  fs_debugline.glsl  vs_block001.glsl  vs_debugline.glsl
MC_Src/: BaseStage.cpp
MC_Src/map_generate/: map_generate.h
Octree_Demo/: README.md  main.cpp  object.cpp  object.h  octree_node.cpp  octree_node.h
OldRef/: L_0_1-6_BeforeTransform.cpp  L_0_6_BeforeTransform.cpp  L_0_7_Transform.cpp  L_0_8_Axis.cpp  L_0_9_Camera.cpp  L_1_0_ColorInit.cpp  L_1_1_BaseLighting.cpp  L_1_2_Materials.cpp  L_1_3_LightingMaps.cpp  L_1_4_LightCasters.cpp  L_1_5_MultipleLights.cpp  L_7_2_RenderingText.cpp
TrashPractiseCode/: Trash001  Trash001.cpp
dependencies/: Camera.h  Makefile  cmake_install.cmake  shader.h
dependencies/GLFW/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
dependencies/GLFW/src/: Makefile  cmake_install.cmake
dependencies/selfmade/: Camera.h  filesystem.h  shader.h  texture.h
shaders/: fs001.glsl  fs002.glsl  fs_1_1.glsl  fs_1_2.glsl  fs_1_3.glsl  fs_1_5.glsl  lamp_fs_1_1.glsl  lamp_fs_1_2.glsl  lamp_fs_1_3.glsl  lamp_fs_1_5.glsl  lamp_vs_1_1.glsl  lamp_vs_1_3.glsl  vs001.glsl  vs0021.glsl  vs08.glsl  vs_1_1.glsl  vs_1_2.glsl
